--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <footer>
         
         <span id="fbook"><a href="https://www.facebook.com" target="_blank"><img src="http://i.imgur.com/h46rcvC.png"/></a></span>
-        <a href="http://geekwiseb2.github.io/restaurante-geekwise-alonzo-yrigollen/"><span class="button">Restaurante</span></a>
+        <a href='http://geekwiseb2.github.io/restaurante-geekwise-alonzo-yrigollen/' target="_blank"><span class="button">Restaurante</span></a>
           <p><br>
         <br>&copy; 2016 Geekwise Alonzo Yrigollen
         </p>
