--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
 
        </section>
         <section>
-            <a href=''http://geekwiseb2.github.io/restaurante-geekwise-alonzo-yrigollen/' target="_blank"'>
-            <span class="button">
+            <a href='http://geekwiseb2.github.io/restaurante-geekwise-alonzo-yrigollen'/ target="_blank"> 
+                <span class="button">
                Restaurante
-            </span>
-            </a>
+                </span></a>
+            
              <span>
               <p id="copy">
                 &copy; 2016 Geekwise Alonzo Yrigollen
