--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
             <a href='http://geekwiseb2.github.io/restaurante-geekwise-alonzo-yrigollen'/ target="_blank"> 
                 <span class="button">
                Restaurante
-                </span></a>
+                </span>
+            </a>
             
              <span>
               <p id="copy">
